[gd_scene load_steps=4 format=3 uid="uid://xuvnhtg7ox3i"]

[ext_resource type="Script" path="res://scripts/main_menu/main_menu.gd" id="1_f6d7l"]
[ext_resource type="PackedScene" uid="uid://deidkuj34u7yu" path="res://scenes/main_menu/level_1_main_menu_scene.tscn" id="4_c83o0"]
[ext_resource type="Script" path="res://scripts/main_menu/new_game.gd" id="11_jf6cj"]

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_f6d7l")

[node name="Level1MainMenuScene" parent="." instance=ExtResource("4_c83o0")]

[node name="MainMenuUI" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="MainMenuUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -412.0
offset_top = -209.0
offset_right = 414.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameName" type="Label" parent="MainMenuUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 128
text = "Project Futbo"

[node name="NewGame" type="Button" parent="MainMenuUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 36
text = "  New Game  "
script = ExtResource("11_jf6cj")

[node name="Quit" type="Button" parent="MainMenuUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 36
text = "  Quit  "

[connection signal="pressed" from="MainMenuUI/GridContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenuUI/GridContainer/Quit" to="." method="_on_exit_pressed"]
